# iLQR_template

./: CMakeLists.txt  ILQR.cpp  ILQR.h  README.md  iLQR.cpp  iLQR.h  main.cpp  matrixOperation.cpp  matrixOperation.h
cmake/: iLQRConfig.cmake
